--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,11 +1,18 @@
-
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 50px;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin: 50px;
+  background-color: grey;
 }
+
+h1 {
+  color: orange;
+}
+
 button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 25%;
 }
